--- a/posts/daily-patterns-in-crypto-currency-prices/index.qmd
+++ b/posts/daily-patterns-in-crypto-currency-prices/index.qmd
@@ -6,7 +6,7 @@ categories: [R, analysis, crpto-currency]
 description-meta: Analysis of recent Bitcoin price history to see if there are predictable
   patterns in prices based on day of week that can be leveraged for trading.
 draft: false
-image: img/
+image: btc-day-of-week-thumbnail.png
 toc: true
 toc-depth: 4
 toc-location: left
